# easy-tool

./: Cargo.toml  build.rs
src/: lib.rs  main.rs
tests/: window_test.rs
ui/: app.slint  test.slint  time_trans.slint
ui/components/: close.slint
