[package]
name = "easy-tool"
version = "0.1.0"
edition = "2024"

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[dependencies]
slint = { version = "1.14", features = ["renderer-skia"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.3"
rdev = "0.5.3"
log = "0.4.27"
flexi_logger = "0.23"
image = "0.24"
tray-icon = "0.21.2"
# 跨平台粘贴板库
arboard = "2"
winit = "0.30.12"
# 用于访问 winit 特性
i-slint-backend-winit = "1.7"
# 用于获取原始窗口句柄
raw-window-handle = "0.6"
# 用于调用 Windows 底层 API
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
slint-build = "1.14.1"

# release优化
[profile.release]
opt-level = "z"      # 优化文件体积
lto = true           # 开启全局链接优化
codegen-units = 1    # 牺牲编译速度换取更小的体积
panic = "abort"      # 移除异常回溯代码
strip = true         # 自动剥离符号表 (Rust 1.59+)